name:                ajax-backend

version:             0.0.0.0

-- synopsis:            

-- description:         

-- license:             

license-file:        LICENSE

author:              Herbert Lange

maintainer:          herbert.lange@cse.gu.se

-- copyright:           

category:            Web

build-type:          Simple

extra-source-files:  CHANGELOG.md

cabal-version:       >=1.10

Flag CGI
  description: Build as a CGI program
  default:     False

executable ajax-backend
  If flag(CGI)
    main-is:             Main-CGI.hs
  Else
    main-is:             Main-Standalone.hs

  other-modules:
      Ajax
    , Database
    , Protocol
  
  -- other-extensions:    
  
  build-depends:         base >=4.8 && <4.10
                       , aeson >=1.0
                       , text
                       , bytestring
                       , containers
                       , muste
                       , pgf
                       , mtl
                       , network-uri

  if flag(CGI)
    build-depends:       cgi >= 3001.3.0.2
  else
    build-depends:       vector
                       , sqlite-simple
                       , time
                       , cryptonite
                       , crypto-random-api
                       , QuickCheck
                       , base64-bytestring
                       , wai
                       , warp
                       , http-types

  -- hs-source-dirs:      
  
  default-language:    Haskell2010
  
executable db-init
  main-is:             DB-Init.hs

  other-modules:
      Database

  build-depends:       base >=4.8 && <4.10
                     , containers
                     , QuickCheck
                     , time
                     , cryptonite == 0.25.*
                     , crypto-random-api
                     , muste
                     , pgf
                     , sqlite-simple
                     , text
                     , bytestring
                     , base64-bytestring

  default-language:    Haskell2010